--- a/app/src/main/res/layout/fragment_package_trans_task_item.xml
+++ b/app/src/main/res/layout/fragment_package_trans_task_item.xml
@@ -12,11 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/bg_round_normal">
+        android:background="@drawable/bg_round_normal"
+        android:padding="@dimen/size_5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/size_5dp"
+            android:paddingRight="@dimen/size_10sp">
             <TextView
                 android:id="@+id/size"
                 android:layout_width="wrap_content"
@@ -37,6 +40,7 @@
                 android:text="包裹编号"
                 android:gravity="center_vertical"
                 android:textColor="@color/colorOrange"
+                android:background="@drawable/menu_bg_normal"
                 android:textSize="15dp" />
         </RelativeLayout>
 
@@ -157,10 +161,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:paddingLeft="@dimen/size_14sp"
-            android:paddingRight="@dimen/size_14sp"
-            android:paddingTop="@dimen/size_10sp"
-            android:paddingBottom="@dimen/size_10sp"
+            android:padding="@dimen/size_5dp"
             android:orientation="horizontal">
                 <TextView
                     android:id="@+id/callprevious"
