--- a/app/src/main/res/layout/item_wrap_package.xml
+++ b/app/src/main/res/layout/item_wrap_package.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
+        android:drawableLeft="@mipmap/icon_express_receive"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
         android:textSize="@dimen/size_18sp"
         android:layout_below="@id/left"
         android:id="@+id/right"
+        android:drawableLeft="@mipmap/icon_search_orange"
         android:text="快递状态：" />
     <TextView
         android:layout_marginTop="@dimen/size_5dp"
