--- a/app/src/main/res/layout/fragment_list_extask_item.xml
+++ b/app/src/main/res/layout/fragment_list_extask_item.xml
@@ -16,11 +16,10 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/expressId"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:paddingLeft="@dimen/size_5dp"
-            android:paddingRight="@dimen/size_5dp"
+            android:padding="@dimen/size_5dp"
             android:textSize="@dimen/size_16sp"
             android:text="快递单号"
             android:background="@drawable/menu_bg_normal"
