--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="bg_gray">#f7f7f7</color>
     <color name="bg_gray_trans">#CDF7F7F7</color>
 
-    <color name="lightgray">#D3D3D3</color> <!-- 亮灰色 -->
+    <!-- 亮灰色 -->
     <color name="white">#ffffff</color>
     <color name="white_trans20">#C8FFFFFF</color>
     <color name="greenPrimaryLight">#22008577</color>
